html básico criado

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!-- Este é um comentario em HTML. -->
 <!DOCTYPE HTML><!-- Este é o DTD do HTML5. -->
 <!-- 
-Uma definição de tipo de documento
+Uma definição de tipo de documento -->
+
+<html>
+	<!-- primeiro filho do html. -->
+	<head>
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="widht:device-widht, initial-scale=1.0"/>
+		<title>Exemplo</title>
+	</head>
+	<body>
+	<h1>Exemplos de TAGS</h1>
+	</body>
+</html>
