Iniciando com blocos e tags

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@ Uma definição de tipo de documento -->
 	</head>
 	<body>
 	<h1>Exemplos de TAGS</h1>
+	<H2>Analisando tags de bloco e linha</H2>
+
+	<spam style="border: solid 2px #ff0000">Eu sou uma tag de linha...</spam>
+
+	<div style="border: solid 2px #0004fd">Eu sou uma tag de bloco...</div>
 	</body>
 </html>
